# Lab--4

./: CMakeLists.txt  main.cpp  task1.h  task2.h  tests.cpp  tests.h
Tasks/: task1.cpp  task1.h  task2.cpp  task2.h
Tests/: tests.cpp
